--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,12 @@ h1 {
     z-index: -1;
 }
 
+.py-4 {
+    padding-top: 0rem!important;
+    padding-bottom: 1.5rem!important;
+}
+
+
 @keyframes fade-in {
     0% {
         background-color: #fcfcfc;
