--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,7 +23,15 @@
 }
 
 .card {
-	border-radius: 20px;
+	border-radius: 5px;
+    box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+    padding: 30px;
+    margin: 20px;
+    border-top: 5px solid #31393a;
+}
+
+.card-body {
+    padding: 0rem !important;
 }
 
 .btn-link {
